--- a/CSS/HomePage.css
+++ b/CSS/HomePage.css
@@ -33,11 +33,11 @@
       display:flex;
       align-items:center;
       justify-content:space-between;
-      padding:12px 0
+      padding:12px
     }
     .brand{
       display:flex;
-      gap:12px;
+      gap: 50px;
       align-items:center;
       width: 100%;
       justify-content: space-between;
@@ -45,7 +45,7 @@
 
     .brand-left{
       display: flex;
-      gap: 12px;
+      gap: 50px;
       align-items: center;
     }
 
@@ -62,7 +62,7 @@
     /* 导航栏 */
     nav{
       display: flex;
-      gap: 14px;
+      gap: 50px;
       align-items: center;
     }
 
@@ -150,5 +150,6 @@
       font-size:1.5rem;
       margin-bottom:12px
     }
+
 
   
